# matilda-brain

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  goobits.yaml  pyproject.toml  reproduce_issue.py  setup.sh  vm.yaml
docs/: api-reference.md  architecture.md  configuration.md  development.md  extensibility.md
docs/testing/: cli-test-checklist.md  mocking.md
examples/: 01_basic_usage.py  02_tools_and_workflows.py  03_chat_and_persistence.py  04_advanced_features.py  README.md
examples/plugins/: README.md  echo_backend.py  mock_llm_backend.py
goobits_matilda_brain/: cli.py  cli_hooks.py
scripts/: benchmark_http.py  setup.sh  test.py  test.sh
src/matilda_brain/: __init__.py  app_hooks.py  cli.py  memory_client.py  protocol.py  security.py  server.py  stateless.py  token_storage.py
src/matilda_brain/backends/: __init__.py  base.py  cloud.py  hub.py  local.py  testing.py
src/matilda_brain/commands/: memory.py
src/matilda_brain/config/: defaults.yaml  loader.py  manager.py  schema.py
src/matilda_brain/core/: __init__.py  api.py  models.py  routing.py  types.py
src/matilda_brain/hooks/: __init__.py  config.py  core.py  error_handlers.py  models.py  server.py  tools.py  utils.py
src/matilda_brain/i18n/: __init__.py
src/matilda_brain/internal/: protocol.py  security.py  stateless.py
src/matilda_brain/internal/hooks/: config.py  core.py  error_handlers.py  models.py  server.py  tools.py  utils.py
src/matilda_brain/internal/utils/: __init__.py  async_utils.py  error_display.py  messages.py  providers.py  warning_capture.py
src/matilda_brain/plugins/: loader.py
src/matilda_brain/schemas/: __init__.py  requests.py  responses.py
src/matilda_brain/session/: chat.py  manager.py  serialization.py
src/matilda_brain/tools/: __init__.py  base.py  builtins.py  executor.py  recovery.py  registry.py
src/matilda_brain/tools/builtins/: __init__.py  code.py  config.py  filesystem.py  system.py  web.py
src/matilda_brain/utils/: async_utils.py  messages.py  providers.py  smart_suggestions.py
src/ttt/: app_hooks.py  cli.py  server.py  stateless.py
src/ttt/core/: api.py
src/ttt/hooks/: config.py  core.py  models.py  server.py  tools.py  utils.py
tests/: README.md  conftest.py  test_api_core.py  test_api_streaming.py  test_backends_cloud.py  test_backends_local.py  test_chat.py  test_cli_comprehensive_integration.py  test_cli_smoke.py  test_config.py  test_errors.py  test_integration.py  test_mock_verification.py  test_multimodal.py  test_plugins.py  test_routing.py  test_stateless.py  test_tools_builtin.py  test_tools_chat.py  test_tools_custom.py
tests/cli/: test_cli_ask.py  test_cli_chat.py  test_cli_config.py  test_cli_core.py  test_cli_json.py  test_cli_models.py  test_cli_modern.py  test_cli_options.py  test_cli_parameters.py  test_cli_tools.py
tests/integration/cli/: test_cli_ask.py  test_cli_core.py  test_cli_modern.py  test_cli_parameters.py
tests/unit/: test_api_streaming.py  test_backends_local.py  test_chat.py  test_cli_smoke.py  test_models.py  test_multimodal.py  test_routing.py
tests/unit/cli/: test_cli_config.py  test_cli_json.py  test_cli_options.py  test_cli_tools.py
tests/utils/: http_mocks.py  mocks.py
