[build-system]
requires = [ "setuptools>=64", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "goobits-matilda-brain"
version = "1.0.3"
description = "A powerful AI assistant for your terminal"
readme = "README.md"
requires-python = ">=3.11"
keywords = [ "ai", "assistant", "terminal", "llm", "chat", "gpt", "claude",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Communications :: Chat", "Topic :: Scientific/Engineering :: Artificial Intelligence",]
dependencies = [ "click>=8.0.0,<9.0", "rich-click>=1.7.0,<2.0", "rich>=13.0.0,<14.0", "pydantic>=2.0.0,<3.0", "httpx>=0.24.0,<1.0", "litellm>=1.0.0,<2.0", "pyyaml>=6.0.1,<7.0", "bleach>=6.1.0,<7.0", "validators>=0.20.0,<1.0",]
[[project.authors]]
name = "Matilda Brain Contributors"

[project.license]
text = "MIT"

[project.optional-dependencies]
local = [ "httpx>=0.24.0,<1.0",]
dev = [ "pytest>=7.0,<9.0", "pytest-asyncio>=0.20.0,<1.0", "pytest-cov>=4.0,<6.0", "pytest-timeout>=2.0,<3.0", "pytest-xdist>=3.0.0,<4.0", "pytest-sugar>=0.9.0,<2.0", "pytest-clarity>=1.0.0,<2.0", "pytest-html>=3.0.0,<5.0", "pytest-json-report>=1.5.0,<2.0", "black>=22.0,<25.0", "ruff>=0.1.0,<1.0", "mypy>=1.0.0,<2.0", "types-PyYAML>=6.0,<7.0",]
publish = [ "build>=1.0,<2.0", "twine>=4.0,<6.0",]

[project.scripts]
brain = "matilda_brain.cli:main"

[project.urls]
Homepage = "https://github.com/goobits/matilda-brain"
"Bug Tracker" = "https://github.com/goobits/matilda-brain/issues"

[tool.ruff]
line-length = 120
target-version = "py311"
cache-dir = ".artifacts/cache/ruff"

[tool.black]
line-length = 120
target-version = [ "py311",]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
cache_dir = ".artifacts/cache/mypy"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.package-data]
matilda_brain = [ "setup.sh",]
goobits_matilda_brain = [ "setup.sh",]

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
    "requires_credentials: tests that require API keys or credentials",
    "requires_network: tests that require external network access",
    "requires_service: tests that require local services running",
    "requires_gpu: tests that require a GPU",
    "integration: integration tests",
    "slow: slow tests",
    "benchmark: benchmark tests",
    "examples: example tests",
]
cache_dir = ".artifacts/cache/pytest"
asyncio_mode = "auto"
testpaths = [ "tests",]
addopts = [ "--strict-markers", "--disable-warnings", "-ra",]

[tool.coverage.run]
data_file = ".artifacts/cache/.coverage"

[tool.ruff.lint.per-file-ignores]
"src/matilda_brain/hooks/*.py" = [ "E402",]

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "matilda_brain*",]
exclude = [ "tests*", "**/__pycache__", "*.egg-info", "build", "dist",]
